fix: sidebar items are not wrapped with li tag

--- a/packages/zenn-cli/styles/components/_sidebar.scss
+++ b/packages/zenn-cli/styles/components/_sidebar.scss
@@ -27,6 +27,11 @@
   }
   user-select: none;
 }
+.sidebar-collection__li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
 .sidebar-nav-item {
   display: block;
